WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116597
[Qt] REGRESSION(
r149292
): broke scrolling in Qt WK2 desktop mode
https://bugs.webkit.org/show_bug.cgi?id=116597
Summary
[Qt] REGRESSION(r149292): broke scrolling in Qt WK2 desktop mode
Noam Rosenthal
Reported
2013-05-22 02:07:56 PDT
Scrolling now doesn't work at all in MiniBrowser --desktop
Attachments
Patch
(4.37 KB, patch)
2013-05-26 01:54 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2013-05-28 05:24 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2013-05-26 01:54:36 PDT
Created
attachment 202908
[details]
Patch
Noam Rosenthal
Comment 2
2013-05-26 01:56:55 PDT
this fixes the regression, however since the Qt-WK2-desktop mode is a configuration that is not covered at all by tests, I can't guarantee regressions like this won't come back.
Noam Rosenthal
Comment 3
2013-05-28 05:24:33 PDT
Created
attachment 203043
[details]
Patch
Allan Sandfeld Jensen
Comment 4
2013-05-28 05:38:15 PDT
Comment on
attachment 203043
[details]
Patch LGTM
WebKit Commit Bot
Comment 5
2013-05-28 06:07:24 PDT
Comment on
attachment 203043
[details]
Patch Clearing flags on attachment: 203043 Committed
r150798
: <
http://trac.webkit.org/changeset/150798
>
WebKit Commit Bot
Comment 6
2013-05-28 06:07:27 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 7
2013-05-28 07:55:17 PDT
FYI: It broke ~500 pixel tests on the pixel bot.
Zoltan Arvai
Comment 8
2013-05-28 08:01:24 PDT
(In reply to
comment #7
)
> FYI: It broke ~500 pixel tests on the pixel bot.
The scrollbar is missing on actual results
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release%20WebKit2%20%28Pixel%20Tests%29/r150800%20%284395%29/results.html
Zoltan Arvai
Comment 9
2013-05-29 09:06:35 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > FYI: It broke ~500 pixel tests on the pixel bot. > > The scrollbar is missing on actual results >
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release%20WebKit2%20%28Pixel%20Tests%29/r150800%20%284395%29/results.html
No scrollbar appears in "MiniBrowser --desktop". But there is also no scrollbar with
r149291
. If the new results without scrollbars are acceptable I will rebaseline them. Is it ok?
Zoltan Arvai
Comment 10
2013-05-30 07:28:14 PDT
PNG rebaseline for QT WK2 landed in
http://trac.webkit.org/changeset/150961
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug