[Qt] REGRESSION(r149292): broke scrolling in Qt WK2 desktop mode https://bugs.webkit.org/show_bug.cgi?id=116597

ScrollingCoordinatorCoordinatedGraphics is tailored specifically for
fixedLayout mode. When fixedLayout is not set, it should be turned off.

Patch by Noam Rosenthal <noam@webkit.org> on 2013-05-28
Reviewed by Allan Sandfeld Jensen.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::CoordinatedLayerTreeHost):

Canonical link: https://commits.webkit.org/135164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150798 268f45cc-cd09-0410-ab3c-d52691b4dbfc