Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp
@@ -99,7 +99,8 @@ CoordinatedLayerTreeHost::CoordinatedLayerTreeHost(WebPage* webPage)
     , m_lastAnimationServiceTime(0)
 #endif
 {
-    m_webPage->corePage()->settings()->setScrollingCoordinatorEnabled(true);
+    if (m_webPage->useFixedLayout())
+        m_webPage->corePage()->settings()->setScrollingCoordinatorEnabled(true);
     m_webPage->corePage()->settings()->setApplyDeviceScaleFactorInCompositor(true);
 
     // Create a root layer.
